--- a/src/components/ActiveMenu/ActiveMenu.css
+++ b/src/components/ActiveMenu/ActiveMenu.css
@@ -1,3 +1,14 @@
+ul {
+  list-style: none;
+  text-align: left;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-weight: 900;
+}
+
 .big-font {
   font-size: 0.5em;
 }
